# burn_distributed_rl

./: .gitignore  Cargo.toml  README.md
distributed_rl/: Cargo.toml
distributed_rl/src/: environment.rs  lib.rs
distributed_rl/src/actors/: actor.rs  actor_pool.rs  mod.rs
distributed_rl/src/algorithms/: action_policy.rs  actor_critic.rs  algorithm.rs  continuous_policy.rs  core_algorithm.rs  distributed_algorithm.rs  gae.rs  mod.rs  policy_loss.rs  temporal_policy.rs  vtrace.rs
distributed_rl/src/algorithms/impala/: config.rs  distributed_impala.rs  impala.rs  impala_buffer.rs  mod.rs  tests.rs
distributed_rl/src/algorithms/ppo/: distributed_ppo.rs  distributed_ppo_buffer.rs  mod.rs  ppo.rs  ppo_batch_buffer.rs  ppo_buffer.rs  ppo_transition.rs  prioritization.rs  recurrent_ppo_buffer.rs  tests.rs
distributed_rl/src/algorithms/sac/: buffer_diagnosis.rs  config.rs  entropy_tuning.rs  mod.rs  pipeline_debug_tests.rs  sac.rs  sac_actor.rs  sac_buffer.rs  sac_critic.rs  sac_transition.rs  strategy_diagnosis.rs  tests.rs
distributed_rl/src/algorithms/tests/: continuous_policy_tests.rs  gae_tests.rs  integration_tests.rs  mod.rs  policy_loss_tests.rs  vtrace_tests.rs
distributed_rl/src/buffers/: buffer_traits.rs  mod.rs  rollout_buffer.rs  sequence_buffer.rs  tests.rs  trajectory_store.rs
distributed_rl/src/checkpoint/: checkpointer.rs  mod.rs
distributed_rl/src/core/: bytes_slot.rs  episode_state.rs  experience_buffer.rs  mod.rs  model_slot.rs  model_version.rs  record_slot.rs  recurrent.rs  running_stats.rs  shared_buffer.rs  target_network.rs  transition.rs
distributed_rl/src/learner/: learner.rs  mod.rs  tests.rs
distributed_rl/src/messages/: actor_msg.rs  coordinator_msg.rs  eval_msg.rs  learner_msg.rs  mod.rs  tests.rs
distributed_rl/src/metrics/: logger.rs  mod.rs  training_metrics.rs
distributed_rl/src/nn/: attention.rs  mod.rs  orthogonal.rs  spectral_norm.rs
distributed_rl/src/runners/: distributed_impala_runner.rs  distributed_ppo_config.rs  distributed_ppo_runner.rs  distributed_recurrent_ppo_runner.rs  distributed_runner.rs  impala_runner.rs  learner.rs  mod.rs  ppo_config.rs  ppo_runner.rs  recurrent_ppo_assessment.md  rollout_storage.rs  runner.rs  sac_config.rs  sac_runner.rs
distributed_rl/src/runners/ppo_strategies/: feed_forward.rs  mod.rs  recurrent.rs
distributed_rl/src/runners/sac_strategies/: feed_forward.rs  mod.rs  recurrent.rs
distributed_rl/src/runners/tests/: config_tests.rs  env_wrapper_sps_tests.rs  impala_freeze_bug_tests.rs  impala_runner_tests.rs  integration_tests.rs  mod.rs  ppo_runner_tests.rs  recurrent_ppo_runner_tests.rs  sps_degradation_tests.rs  storage_tests.rs  wgpu_pipeline_sps_tests.rs
distributed_rl/src/scheduling/: lr_scheduler.rs  mod.rs  tests.rs
environments/quadcopter/: Cargo.toml
environments/quadcopter/examples/: stress_test.rs  visualization_showcase.rs
environments/quadcopter/src/: adapter.rs  config.rs  constants.rs  env.rs  lib.rs  noise.rs  normalization.rs  observation.rs  state.rs  termination.rs  types.rs
environments/quadcopter/src/physics/: aerodynamics.rs  dynamics.rs  mod.rs  motor.rs  quaternion.rs  simd_helpers.rs
environments/quadcopter/src/renderer/: config.rs  drone_shape.rs  history.rs  mod.rs  projection.rs  realtime.rs  snapshot.rs
environments/quadcopter/src/reward/: components.rs  mod.rs  presets.rs
environments/quadcopter/src/tests/: edge_case_tests.rs  environment_tests.rs  integration_tests.rs  mod.rs  physics_tests.rs  reward_tests.rs  state_tests.rs  termination_tests.rs
environments/rf/: Cargo.toml  README.md
environments/rf/examples/: Screen Recording 2026-01-02 at 18.33.30.mov  passive_simulation.rs  passive_simulation_4.rs  stress_test.rs
environments/rf/src/: adapter.rs  config.rs  constants.rs  env.rs  lib.rs  observation.rs  state.rs
environments/rf/src/agents/: actions.rs  interference.rs  mod.rs  multi_agent.rs  presets.rs  rewards.rs
environments/rf/src/bands/: future.rs  mod.rs  shf.rs  uhf.rs
environments/rf/src/entities/: drone.rs  entity_soa.rs  entity_types.rs  mod.rs  spawner.rs
environments/rf/src/physics/: atmospheric.rs  channel.rs  doppler.rs  fading.rs  ionospheric.rs  mod.rs  multipath.rs  path_loss.rs
environments/rf/src/renderer/: colormap.rs  config.rs  error.rs  gif_recorder.rs  history.rs  mod.rs  realtime.rs  renderer.rs  snapshot.rs
environments/rf/src/renderer/plots/: mod.rs  (+4 more)
environments/rf/src/simd_rf/: complex.rs  helpers.rs  math.rs  mod.rs  random.rs
environments/rf/src/spectrum/: mod.rs  noise.rs  patterns.rs  psd.rs
environments/rf/src/tests/: agent_tests.rs  comprehensive_tests.rs  mod.rs  physics_tests.rs  simd_tests.rs
environments/rf/src/traits/: band.rs  mod.rs  noise.rs  propagation.rs  protocol.rs
environments/rf/src/types/: dimensional.rs  fading.rs  frequency.rs  mod.rs  power.rs  primitives.rs  simd.rs
examples/: Cargo.toml
examples/src/: distributed_impala.rs  distributed_ppo.rs  distributed_ppo_continuous.rs  distributed_recurrent_ppo.rs  distributed_recurrent_ppo_continuous.rs  impala.rs  main.rs  ppo.rs  ppo_continuous.rs  ppo_continuous_sde_showcase.rs  ppo_continuous_state_independent.rs  recurrent_ppo.rs  recurrent_ppo_continuous.rs  sac.rs  sac_continuous.rs
operant_fork/operant/: CHANGELOG.md  CHANGES.md  CLAUDE.md  Cargo.toml  GPU_RESULTS.md  LICENSE  OPTIMIZATION_PLAN.md  README.md  SUMMARY.md  profile_results.txt  pyproject.toml
operant_fork/operant/.github/workflows/: publish-crates.yml  publish.yml
operant_fork/operant/benches/: README.md  bench.py  bench_gpu.py  gpu_vs_cpu_comparison.py  profile_bench.py  simple_timing.py  time_breakdown.py
operant_fork/operant/crates/operant-core/: Cargo.toml
operant_fork/operant/crates/operant-cuda/: Cargo.toml  README.md  build.rs
operant_fork/operant/crates/operant-envs/: Cargo.toml
operant_fork/operant/docs/: 01_structural_philosophy.md  02_custom_environment_guide.md  03_advanced_optimizations.md  04_api_reference.md  NON_AUTO_RESET_API.md
operant_fork/operant/examples/: custom_env_python.md  custom_environment.rs
(+56 files in other folders)
