[workspace]
resolver = "2"

members = [
    "distributed_rl",
    "environments/quadcopter",
    "environments/rf",
    "examples",
    "operant_fork/operant/crates/operant",
    "operant_fork/operant/crates/operant-core",
    "operant_fork/operant/crates/operant-envs"
]

[workspace.dependencies]
burn = { version = "0.19", features = ["ndarray", "wgpu", "autodiff"] }
serde = "1"
