# [workspace] merged into distributed_rl
# resolver = "2"
# members = ["crates/operant", "crates/operant-core", "crates/operant-envs"]

[package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["goshea"]
repository = "https://github.com/galenoshea/operant"
homepage = "https://github.com/galenoshea/operant"
keywords = ["reinforcement", "rl", "simd", "gymnasium", "environments"]
categories = ["science", "simulation", "game-development"]

[workspace.dependencies]
operant-core = { version = "0.4.0", path = "crates/operant-core" }
operant-envs = { version = "0.4.0", path = "crates/operant-envs" }
rand = "0.8"
rand_xoshiro = "0.6"
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
sysinfo = "0.32"
nvml-wrapper = "0.10"
rayon = "1.10"

# Performance optimizations for release builds
[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"                # Link-time optimization across all crates (+5-10% perf)
codegen-units = 1          # Single codegen unit for better optimization (+2-5% perf)
panic = "abort"            # Remove unwinding overhead (+1-2% perf)
strip = true               # Strip symbols for smaller binaries
overflow-checks = false    # Disable overflow checks in release (RL is numerically stable)
