[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "operant"
version = "0.4.0"
description = "High-performance SIMD-optimized RL environments in Rust"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "goshea", email = "goshea@me.com" }]
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "rl", "simd", "gymnasium", "environments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=2.0", "torch>=2.0"]

[project.optional-dependencies]
dev = ["gymnasium>=1.0", "pytest>=8.0"]

[project.urls]
Repository = "https://github.com/galenoshea/operant"

[tool.maturin]
manifest-path = "crates/operant-python/Cargo.toml"
python-source = "python"
features = ["pyo3/extension-module", "simd", "parallel", "tui"]

[tool.poetry.group.dev.dependencies]
maturin = "^1.10.2"
gym = "0.26.2"
psutil = "^7.1.3"

